...
            android:text="@string/button_mode_highlight_text"
            app:backgroundTint="@color/button_highlight"
            android:textColor="@color/button_highlight_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_setup"
            app:layout_constraintBottom_toTopOf="@+id/button_mode_add"
            tools:text="MODE: HIGHLIGHT" />

        <Button
            android:id="@+id/button_mode_add"
            style="@style/button_mode_add_style"
            android:layout_width="match_parent"
...
            android:text="@string/button_highlight_text"
            app:backgroundTint="@color/button_highlight"
            android:textColor="@color/button_highlight_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productIdHighLight"
            app:layout_constraintBottom_toTopOf="@+id/productIdAnchor"
            tools:text="HIGHLIGHT" />

        <EditText
            android:id="@+id/productIdAnchor"
            style="@style/productIdAnchor_style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/productIdAnchor_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_highlight_productId"
            app:layout_constraintBottom_toTopOf="@+id/button_anchor_productId"
            tools:text="PRODUCT ANCHOR ..."
            android:autofillHints="@string/editText_productIdAnchor"
            android:inputType="phone"
            />

        <Button
...
            android:text="@string/button_anchor_text"
            app:backgroundTint="@color/button_anchor"
            android:textColor="@color/button_anchor_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productIdAnchor"
            app:layout_constraintBottom_toTopOf="@+id/productIdAdd"
            tools:text="ANCHOR" />

        <EditText
            android:id="@+id/productIdAdd"
            style="@style/productIdAdd_style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/productIdAdd_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_anchor_productId"
            app:layout_constraintBottom_toTopOf="@+id/button_addLEFT_productId"
            tools:text="PRODUCT ADD ..."
            android:autofillHints="@string/editText_productIdAdd"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_addLEFT_productId"
...
            android:text="@string/button_addLEFT_text"
            app:backgroundTint="@color/button_add_left"
            android:textColor="@color/button_add_left_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productIdAdd"
            app:layout_constraintBottom_toTopOf="@+id/button_addRIGHT_productId"
            tools:text="ADD LEFT" />

        <Button
            android:id="@+id/button_addRIGHT_productId"
            style="@style/button_addRIGHT_productId_style"
            android:layout_width="wrap_content"
...
