package com.th.chapter_11

import android.content.Intent
import android.util.Log
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso
import androidx.test.espresso.IdlingPolicies
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.scrollTo
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.isDisplayed
import androidx.test.espresso.matcher.ViewMatchers.withHint
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.ext.junit.rules.ActivityScenarioRule
import com.th.chapter_11.adapter.RecommendationAdapter
import com.th.chapter_11.util.EspressoIdlingResource
import org.hamcrest.Matchers.allOf
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import java.util.concurrent.TimeUnit
import kotlin.system.exitProcess

// TH: https://www.youtube.com/watch?v=06E4hxpfkME
// TH: https://medium.com/stepstone-tech/better-tests-with-androidxs-activityscenario-in-kotlin-part-1-6a6376b713ea

class MainActivityTest_Template_Explicit {

    private var skipTest=false

    // TH: succeeded with horizontal orientation: 40.
    private val delayThreadMain = 40 // 10, 20, 40.

    private val intent = Intent(
        ApplicationProvider.getApplicationContext(),
        MainActivity::class.java
    )

    // TH: helps launch given Activity before test starts, and
    //     helps close same Activity after test ends.
    @get:Rule
    val mainActivityRule = ActivityScenarioRule<MainActivity>(intent)

    @Before
    fun setUp() {

        val espressoTimeOut = 1

        IdlingPolicies.setMasterPolicyTimeout(
            espressoTimeOut.toLong(),
            TimeUnit.HOURS
        )
        IdlingPolicies.setIdlingResourceTimeout(
            espressoTimeOut.toLong(),
            TimeUnit.HOURS
        )

        IdlingRegistry.getInstance().register(
            EspressoIdlingResource.getCounterIdler()
        )

    }//setUp.

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(
            EspressoIdlingResource.getCounterIdler()
        )
    }//tearDown.

    private fun insertHorizontal(
        maxLimit: Int,
        lastAnchorIndexRow: Int
    ) {

        Log.i(
            "MainActivityTest (Started, Horizontal)",
            "..."
        )

        // TH: represents overall string.
        val overallString: ArrayList<Int> = arrayListOf()

        // TH: represents initial string, right after setup.
        overallString.add(1)
        Log.i(
            "MainActivityTest (initial, horizontal)",
            "overallString=$overallString"
        )

        // TH: tracks running anchor letter, after each insert.
        var lastAnchorLetter = "1"

        // TH: tracks running anchor index, after each insert.
        var lastAnchorIndex = 0

        Log.i(
            "MainActivityTest (horizontal)",
            "lastAnchorLetter=${lastAnchorLetter} @ $lastAnchorIndex"
        )

        // TH: generates hashMap of alphabet.
        // TH: represents how many available indices for insertion.
        // TH: A - (0,1)
        // TH: B - (0,1,2)
        // TH: C - (0,1,2,3)
        // TH: D - (0,1,2,3,4)
        // TH: E - (0,1,2,3,4,5)
        // TH: F - (0,1,2,3,4,5,6)
        val map = hashMapOf<Int,ArrayList<Int>>()

        // TH: remembers last letter inserted.
        val productIdStringList: ArrayList<Int> = arrayListOf()

        // TH: remembers last insertion index per letter.
        val mapLastInsert = hashMapOf<Int,Int>()

        // TH: helps during backtrack.
        val mapRemoveAgain = hashMapOf<Int,Boolean>()

        var limit = 1
        val alphabetStart = 1
        val alphabetEnd   = alphabetStart + limit

        for(eachLimit in alphabetStart until alphabetEnd){

            // represents how many available indices for given letter.
            val listSizeLoop: ArrayList<Int> = arrayListOf()

            for(eachSize in 0 until eachLimit+1){
                listSizeLoop.add(eachSize)
            }//for eachSize.

            map[eachLimit] = listSizeLoop
            mapRemoveAgain[eachLimit] = false

        }//for eachLimit.

        // TH: sorts by key.
        map.toSortedMap().toMap(map)
        mapRemoveAgain.toSortedMap().toMap(mapRemoveAgain)

        // TH: tracks number of steps taken.
        var steps = 0

        while(map.size>0){

            // TH: removes first list from stack.
            val listGenerate = map.remove(limit)

            // TH: removes first item from list.
            val itemGenerate = listGenerate?.removeAt(0)

            // TH: if list!=empty, loads back on stack.
            if(listGenerate?.size!! >0){
                map[limit] = listGenerate
            }
            else{
                mapRemoveAgain[limit]=true
            }

            // TH: generates productId for insertion.
            val repeatLimit = 2
            var productIdString = ""

            // TH: experimental.
            Espresso
                .onView(
                    allOf(
                        withId(
                            R.id.button_mode_add
                        ),
                        withText(
                            "@string/button_mode_add_text"
                        ),
                        isDisplayed()
                    )
                )

            Espresso
                .onView(
                    allOf(
                        withId(
                            R.id.button_mode_add
                        )
                    )
                )
                .perform(
                    scrollTo(),
                    click()
                )

            // TH: inserts given letter at given index.
            if (itemGenerate != null) {

                for(repeat in 0 until repeatLimit){
                    productIdString += limit.toString()
                }//for repeat.

                if(itemGenerate<=lastAnchorIndex){

                    // TH: deals with running anchor index.
                    if(itemGenerate==lastAnchorIndex){

                        // TH: recommends anchor items in RecyclerView (i.e. EditText).
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAnchor
                                    ),
                                    withHint(
                                        "@string/productIdAnchor_hint"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAnchor
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click(),
                                typeText(
                                    lastAnchorLetter
                                ),
                                closeSoftKeyboard()
                            )

                        // TH: recommends anchor items in RecyclerView (i.e. Button).
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_anchor_productId
                                    ),
                                    withText(
                                        "@string/button_anchor_text"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_anchor_productId
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click()
                            )

                        // TH: selects RecyclerView item at running anchor index.
                        selectRecyclerViewMatrix(lastAnchorIndexRow,lastAnchorIndex)

                        // TH: puts EditText in focus.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAdd
                                    ),
                                    withHint(
                                        "@string/productIdAdd_hint"
                                    ),
                                    isDisplayed()
                                )
                            )

                        // TH: types text in EditText.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAdd
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click(),
                                typeText(
                                    productIdString
                                ),
                                closeSoftKeyboard()
                            )

                        // TH: issues insert-left to running anchor index.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_addLEFT_productId
                                    ),
                                    withText(
                                        "@string/button_addLEFT_text"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_addLEFT_productId
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click()
                            )

                    }//if itemGenerate==lastAnchorIndex.

                    // TH: deals with itemGenerate (itemGenerate<lastAnchorIndex).
                    else{

                        // TH: determines which productId currently located at index 'itemGenerate'.
                        val overallStringAtItemGenerate = overallString[itemGenerate]

                        // TH: recommends anchor items in RecyclerView (i.e. EditText).
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAnchor
                                    ),
                                    withHint(
                                        "@string/productIdAnchor_hint"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAnchor
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click(),
                                typeText(
                                    overallStringAtItemGenerate.toString()
                                ),
                                closeSoftKeyboard()
                            )

                        // TH: recommends anchor items in RecyclerView (i.e. Button).
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_anchor_productId
                                    ),
                                    withText(
                                        "@string/button_anchor_text"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_anchor_productId
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click()
                            )

                        // TH: selects RecyclerView item at itemGenerate.
                        selectRecyclerViewMatrix(lastAnchorIndexRow,itemGenerate)

                        // TH: puts EditText in focus.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAdd
                                    ),
                                    withHint(
                                        "@string/productIdAdd_hint"
                                    ),
                                    isDisplayed()
                                )
                            )

                        // TH: types text in EditText.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.productIdAdd
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click(),
                                typeText(
                                    productIdString
                                ),
                                closeSoftKeyboard()
                            )

                        // TH: issues insert-left to that productId, see above.
                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_addLEFT_productId
                                    ),
                                    withText(
                                        "@string/button_addLEFT_text"
                                    ),
                                    isDisplayed()
                                )
                            )

                        Espresso
                            .onView(
                                allOf(
                                    withId(
                                        R.id.button_addLEFT_productId
                                    )
                                )
                            )
                            .perform(
                                scrollTo(),
                                click()
                            )

                    }//else itemGenerate<lastAnchorIndex.

                }//if itemGenerate<=lastAnchorIndex.
                else{ /*itemGenerate>lastAnchorIndex*/

                    // TH: determines which productId currently located at index 'lastAnchorIndex'.
                    val overallStringAtLastAnchorIndex = overallString[lastAnchorIndex]

                    // TH: recommends anchor items in RecyclerView (i.e. EditText).
                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.productIdAnchor
                                ),
                                withHint(
                                    "@string/productIdAnchor_hint"
                                ),
                                isDisplayed()
                            )
                        )

                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.productIdAnchor
                                )
                            )
                        )
                        .perform(
                            scrollTo(),
                            click(),
                            typeText(
                                overallStringAtLastAnchorIndex.toString()
                            ),
                            closeSoftKeyboard()
                        )

                    // TH: recommends anchor items in RecyclerView (i.e. Button).
                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.button_anchor_productId
                                ),
                                withText(
                                    "@string/button_anchor_text"
                                ),
                                isDisplayed()
                            )
                        )

                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.button_anchor_productId
                                )
                            )
                        )
                        .perform(
                            scrollTo(),
                            click()
                        )

                    // TH: selects RecyclerView item at lastAnchorIndex.
                    selectRecyclerViewMatrix(lastAnchorIndexRow,lastAnchorIndex)

                    // TH: puts EditText in focus.
                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.productIdAdd
                                ),
                                withHint(
                                    "@string/productIdAdd_hint"
                                ),
                                isDisplayed()
                            )
                        )

                    // TH: types text in EditText.
                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.productIdAdd
                                )
                            )
                        )
                        .perform(
                            scrollTo(),
                            click(),
                            typeText(
                                productIdString
                            ),
                            closeSoftKeyboard()
                        )

                    // TH: issues insert-right to that productId, see above.
                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.button_addRIGHT_productId
                                ),
                                withText(
                                    "@string/button_addRIGHT_text"
                                ),
                                isDisplayed()
                            )
                        )

                    Espresso
                        .onView(
                            allOf(
                                withId(
                                    R.id.button_addRIGHT_productId
                                )
                            )
                        )
                        .perform(
                            scrollTo(),
                            click()
                        )

                }//else itemGenerate>lastAnchorIndex.

                // TH: original.
                clearAllAndSubmit()

                Log.i(
                    "MainActivityTest (horizontal)",
                    "steps=${++steps}"
                )


                // TH: inserts given letter at available index.
                overallString.add(itemGenerate,productIdString.toInt())
                Log.i(
                    "MainActivityTest (insert, horizontal)",
                    "overallString=$overallString"
                )

                // TH: updates running anchor index.
                lastAnchorIndex = itemGenerate

                // TH: updates running anchor letter.
                lastAnchorLetter = productIdString

                Log.i(
                    "MainActivityTest (horizontal)",
                    "lastAnchorLetter=${lastAnchorLetter} @ $lastAnchorIndex"
                )

                // TH: remembers last insertion index per letter.
                mapLastInsert[productIdString.toInt()]=itemGenerate

                // TH: sorts by key.
                mapLastInsert.toSortedMap().toMap(mapLastInsert)

                // TH: remembers last letter inserted.
                // TH: avoids duplicates.
                if(!productIdStringList.contains(productIdString.toInt())){
                    // TH: remembers last letter inserted.
                    productIdStringList.add(productIdString.toInt())
                }

            }//if itemGenerate != null.

            // TH: initiates backtrack.
            if(overallString.size==maxLimit){

                // TH: removes letter from last insertion point.
                if (itemGenerate != null) {
                    mapLastInsert[
                            productIdString.toInt()
                    ]?.let {
                        lastAnchorIndex  = it
                        lastAnchorLetter = overallString.removeAt(it).toString()
                    }
                }

                Log.i(
                    "MainActivityTest (remove horizontal,  after)",
                    "overallString=$overallString"
                )

                Log.i(
                    "MainActivityTest (horizontal)",
                    "lastAnchorLetter=${lastAnchorLetter} @ $lastAnchorIndex"
                )

                // TH: enables DELETE mode.
                Espresso
                    .onView(
                        allOf(
                            withId(
